repositories and database loader
1) Added Repository interfaces for each entity
2) Added Initial data script
3) Added DatabaseLoader as CommandLineRunner to test the data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+#logging
+logging.level.com.vega.springit=DEBUG
+
+#h2
+spring.h2.console.enabled=true
+
+#datasource (default to testdb)
+spring.datasource.name=comp-mgmt
+
+#show all queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+
+#turn statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
