OwnerController and AddressController <<wip>>
Created the Basic CRUD API's for the Owner
createdd the basic CRUD API's for the Address <<wip>>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+#version
+version = v1
+app_short_name = cpgr
 
 #logging
 logging.level.com.vega.springit=DEBUG
+
+#rest
+#base path
+server.servlet.context-path=/cpgr/api/v1
+
 
 #h2
 spring.h2.console.enabled=true
